# od-parse

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES.md  CHANGELOG.md  DEVELOPMENT.md  INSTALL.md  LICENSE  QUICK_START.md  README.md  RELEASE_NOTES_v0.2.0.md  od-parse.yaml  pyproject.toml  run_tests.py  setup.py  setup_dev.sh  test_intelligent_parsing.py  test_pdf_parsing.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-release.yml  ci.yml  publish.yml
docs/: api_keys_config.md  cli_guide.md  cloud_vllm_guide.md  integration_guide.md  llm_vs_vllm_guide.md  pdf_with_images_guide.md  rag_integration.md  technical_reference.md  vllm_setup_guide.md
examples/: 01_quick_start.py  REVIEW_SUMMARY.md  advanced_features_demo.py  advanced_pdf_parsing.py  basic_usage.py  excel_processing.py  pdf_with_images_google.py  quick_start.ipynb  trocr_example.py  trocr_simple.py
od_parse/: __init__.py  api.py  exceptions.py  main.py
od_parse/advanced/: __init__.py  dl_layout_detection.py  document_intelligence.py  form_understanding.py  integrations.py  layout_analysis.py  llava_next.py  neural_table_extraction.py  optimized_processor.py  pipeline.py  semantic_structure.py  table_extraction.py  table_transformer.py  transformer_ocr.py  unified_parser.py  vector_storage.py  vlm_processor.py
od_parse/agents/: __init__.py  cache_agent.py  parsing_agent.py  resource_agent.py
od_parse/async_processing/: __init__.py  async_parser.py
od_parse/chunking/: __init__.py  document_segmenter.py
od_parse/config/: __init__.py  advanced_config.py  env_config.py  llm_config.py  settings.py
od_parse/converter/: __init__.py  markdown_converter.py
od_parse/excel/: __init__.py  duckdb_processor.py
od_parse/intelligence/: __init__.py  document_analyzer.py  document_classifier.py
od_parse/llm/: __init__.py  document_processor.py
od_parse/multilingual/: __init__.py  language_processor.py
od_parse/ocr/: __init__.py  handwritten.py  image_enhancer.py  multi_engine.py  trocr_engine.py
od_parse/parser/: __init__.py  optimized_parser.py  pdf_parser.py
od_parse/quality/: __init__.py  assessment.py
od_parse/utils/: __init__.py  error_handler.py  file_utils.py  logging_utils.py  text_cleaner.py  text_normalizer.py
scripts/: build_release.sh  pre_commit_check.sh  quick_test.sh
tests/: create_sample_pdf.py  run_demo_tests.py  run_tests.py  test_async_processing.py  test_converter.py  test_image_enhancer.py  test_llava_next.py  test_multi_engine_ocr.py  test_multilingual.py  test_ocr.py  test_parser.py  test_quality_assessment.py  test_table_transformer.py  test_trocr.py
